fixed scrolling on mobile

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,6 @@
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 html {
@@ -15,7 +16,8 @@ body {
 }
 
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
@@ -25,4 +27,5 @@ body {
   background-color: rgba(225, 225, 225, 0.452);
   background-repeat: no-repeat;
   background-size: cover;
-}/*# sourceMappingURL=app.css.map */
+  overflow: hidden;
+} /*# sourceMappingURL=app.css.map */
